--- a/dev/pug/pages/portfolio-more.pug
+++ b/dev/pug/pages/portfolio-more.pug
@@ -2,19 +2,19 @@ doctype html
 html(lang = 'ru')
 	head
 		meta(charset = 'UTF-8')
-		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible" content="ie=edge")
 
-		link(rel="stylesheet" href="css/style.css")
+		link(href="css/style.css" rel="stylesheet")
 		title Портфолио
 
 		//- Favicon
-		link(rel='shortcut icon', href='favicon/favicon.ico', type='image/x-icon')
-		link(rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png")
-		link(rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png")
-		link(rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png")
-		link(rel="manifest" href="favicon/site.webmanifest")
-		link(rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5")
+		link(type='image/x-icon', href='favicon/favicon.ico', rel='shortcut icon')
+		link(href="favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180")
+		link(type="image/png" href="favicon/favicon-32x32.png" rel="icon" sizes="32x32")
+		link(type="image/png" href="favicon/favicon-16x16.png" rel="icon" sizes="16x16")
+		link(href="favicon/site.webmanifest" rel="manifest")
+		link(href="favicon/safari-pinned-tab.svg" rel="mask-icon" color="#5bbad5")
 		meta(name="msapplication-TileColor" content="#da532c")
 		meta(name="theme-color" content="#ffffff")
 
@@ -378,13 +378,13 @@ html(lang = 'ru')
 								form.form.js-formContact(name="form-contact")
 									div.form__data
 										label.form__label(for="form-name") Name
-										input#form-name.form__input(type="text" name="Name" required)
+										input#form-name.form__input(name="Name" type="text" required)
 									div.form__data
 										label.form__label(for="form-email") Email Address
-										input#form-email.form__input(type="email" name="Email" required)
+										input#form-email.form__input(name="Email" type="email" required)
 									div.form__data
 										label.form__label(for="form-textarea") Comment
-										textarea#form-textarea.form__textarea(name="Text" required )
+										textarea#form-textarea.form__textarea(name="Text" required)
 									div.form__data.form__data_submit
 										button.form__button Contact Me
 
