--- a/dev/style/_template-selectors.scss
+++ b/dev/style/_template-selectors.scss
@@ -1,5 +1,4 @@
 %reset_button {
-  // cursor: pointer;
   display: block;
   border: none;
   padding: 0;
@@ -12,55 +11,27 @@
   }
 }
 
-%button-play-video {	
-  cursor: pointer;
-  width: 60px;
-  height: 60px;
-  box-shadow: 0 6px 13px rgba($color-1, 0.41);
-  border-radius: 50%;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  // background: url('../img/svg/video_play_icon-1.svg') no-repeat center center $color-1;
-  background-color: $color-1;
-
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-40%, -43%);
-    border-top: 8px solid transparent;
-    border-left: 13px solid $color-1;
-    border-bottom: 8px solid transparent;
-    border-radius: 3px;
-  }
+%link_button {
+  display: block;
+  text-decoration: none;
+  transition: all .2s ease-in-out;
+  padding: 15px 20px;
+  border: 2px solid $color-2;
+  text-transform: uppercase;
+  @include font-primary(18px, $color-2, 700);
 
   &:active {
-    position: absolute;
-    top: 51%;
+    position: relative;
+    top: 1px;
   }
 
-  &:hover {
-    background-color: $color-1;
-    
-    &::after {
-      border-left: 13px solid $color-1;
-    }
+  &:hover,
+  &:focus {
+    outline: none;
+    @include font-primary(18px, $color-1, 700);
   }
 }
 
-%iframe-video {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
 
 %outline-custom {
 
