--- a/dev/style/style.scss
+++ b/dev/style/style.scss
@@ -29,7 +29,7 @@ body {
 }
 
 .page {
-  
+
 }
 
 .container {
@@ -145,32 +145,23 @@ body {
     align-items: center;
 
     &.open {
-      // visibility: visible;
-      opacity: 1;
-      transform: scale(1);
+      right: 0;
+      box-shadow:-4px 0px 20px 0px rgba(0,0,0, 0.5);
+      overflow-y: auto;
     }
 
     @include for-tablet-landscape-up {
-      // width: 100%;
-
-      background:#333;
+      flex-direction: column;
+      width: 320px;
+      height: 100%;
       position: fixed;
       top: 0;
-      right: 0;
       bottom: 0;
-      z-index: 500;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      transform-origin: right top;
-      transform: scale(0);
-      transition: all 0.5s ease-in-out;
-      overflow: hidden;
+      right: -320px;
+      padding: 15px 20px;
+      transition: right 0.5s ease-in-out;
 
-      flex-direction: column;
-
-
-
+      background:#333;
     }
 
 
@@ -181,7 +172,7 @@ body {
       flex-wrap: wrap;
 
       @include for-tablet-landscape-up {
-        flex-direction: column;
+        // flex-direction: column;
       }
     }
 
@@ -253,9 +244,9 @@ body {
   
 }
 
-.locked {
-  overflow: hidden;
-}
+// .locked {
+//   overflow: hidden;
+// }
 
 
 
