--- a/dev/style/_template-selectors.scss
+++ b/dev/style/_template-selectors.scss
@@ -3,7 +3,7 @@
   border: none;
   padding: 0;
   background-color: transparent;
-  transition: all .2s linear;
+  transition: all .2s ease-in-out;
 
   &:active {
     position: relative;
@@ -11,10 +11,14 @@
   }
 }
 
-%link_button {
-  display: block;
+%link_base {
   text-decoration: none;
-  transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out; 
+}
+
+%link_button {
+  @extend %link_base;
+  display: block;
   padding: 15px 20px;
   border: 2px solid $color-2;
   text-transform: uppercase;
@@ -29,14 +33,43 @@
   &:focus {
     outline: none;
     @include font-primary(18px, $color-1, 700);
+
+
+    @include for-tablet-portrait-up {
+      @include font-primary(16px, $color-1, 700);
+    }
+  }
+
+  @include for-tablet-portrait-up {
+    @include font-primary(16px, $color-2, 700);
   }
 }
 
+%section_base {
+  padding: 100px 0;
+  
+  @include for-tablet-landscape-up {
+    padding: 50px 0;
+  }
+}
 
-%outline-custom {
+%form_element {
+  width: 100%;
+  border: 1px solid transparent;
+  padding: 17px 15px;
+  background-color: $color-6;
+  @include font-primary(18px, $color-1, 400);
 
-  &:focus  {
-    outline: none;
-    box-shadow: 0 0 3px 2px $color-1;
-  }  
+  &.error {
+    border: 1px solid $color-10;
+  }
+}
+
+%global_title {
+  @include font-primary(30px, $color-4, 700);
+  text-transform: uppercase;
+}
+
+%global_text {
+  @include font-primary(18px, $color-5, 400, 30px);
 }
