--- a/dev/style/_variables.scss
+++ b/dev/style/_variables.scss
@@ -11,7 +11,7 @@ $_swamp:								#252e30;
 $_black-squeeze:				#f2f2f1;
 $_black-pearl:					#191f21;
 
-$_warning:							#ff0000;
+$_warning:							#f44336;
 
 //=============================================
 $color-1: 	$_white;
