add images smaller size

--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -284,7 +284,9 @@ html(lang = 'ru')
 								div.cards
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site1.png", alt="Site1 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site1.webp")
+												img.card__img(src="img/content/jpg/site1.jpg", alt="Site1 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
@@ -292,7 +294,9 @@ html(lang = 'ru')
 									
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site2.png", alt="Site2 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site2.webp")
+												img.card__img(src="img/content/jpg/site2.jpg", alt="Site2 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
@@ -300,7 +304,9 @@ html(lang = 'ru')
 
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site3.png", alt="Site3 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site3.webp")
+												img.card__img(src="img/content/jpg/site3.jpg", alt="Site3 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
@@ -308,7 +314,9 @@ html(lang = 'ru')
 
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site4.png", alt="Site4 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site4.webp")
+												img.card__img(src="img/content/jpg/site4.jpg", alt="Site4 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
@@ -316,7 +324,9 @@ html(lang = 'ru')
 
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site5.png", alt="Site5 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site5.webp")
+												img.card__img(src="img/content/jpg/site5.jpg", alt="Site5 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
@@ -324,7 +334,9 @@ html(lang = 'ru')
 
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site6.png", alt="Site6 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site6.webp")
+												img.card__img(src="img/content/webp/site6.jpg", alt="Site6 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
@@ -332,7 +344,9 @@ html(lang = 'ru')
 
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site7.png", alt="Site7 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site7.webp")
+												img.card__img(src="img/content/webp/site7.jpg", alt="Site7 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
@@ -340,7 +354,9 @@ html(lang = 'ru')
 
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site8.png", alt="Site8 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site_empty.webp")
+												img.card__img(src="img/content/jpg/site_empty.jpg", alt="Site8 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
@@ -348,11 +364,13 @@ html(lang = 'ru')
 
 									div.card(tabindex="0")
 										div.card__head
-											img.card__img(src="img/site8.png", alt="Site8 (convert PSD to HTML/CSS/JS)")
+											picture.card__picture
+												source(type="image/webp" srcset="img/content/webp/site_empty.webp")
+												img.card__img(src="img/content/jpg/site_empty.jpg", alt="Site9 (convert PSD to HTML/CSS/JS)")
 										div.card__body
 											ul.card__list
 												li.card__item
-													a.card__link.card__link_view(href="https://maksiemens.github.io/site8")
+													a.card__link.card__link_view(href="https://maksiemens.github.io/site9")
 				
 				div#contact.contact
 						div.container
